# demo

./: .cursorrules  .gitignore  README.md
BackEnd/: README  SETUP.md  agent.py  database.py  main.py  pyproject.toml  requirements.txt  save_testcase.py  testcase_agent.db
BackEnd/Model/: __init__.py  chat_models.py  item_models.py  request_models.py  testcase_models.py
BackEnd/Service/: __init__.py  chat_service.py  testcase_service.py
BackEnd/src/: __init__.py  main.py
BackEnd/src/agents/: __init__.py  base_agent.py  react_agent.py
BackEnd/src/graphs/: __init__.py  agent_factory.py  graph_runner.py
BackEnd/src/state/: __init__.py  agent_state.py
BackEnd/src/tools/: __init__.py  basic_tools.py  tool_registry.py
BackEnd/src/utils/: __init__.py  config.py  helpers.py  logger.py
UI/: index.html
UI/css/: style.css
UI/js/: api.js  utils.js
UI/pages/: detail.html
docs/archive/: completed_tasks.md
memory-bank/: activeContext.md  progress.md  projectbrief.md  tasks.md  techContext.md
ui/: package.json  pnpm-lock.yaml
ui/src/app/: layout.tsx  page.tsx
ui/src/components/: CreateRequirementModal.tsx
